<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MaterialCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/item_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_label"
            android:textSize="@dimen/size_item_title_event_label" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:padding="10dp" />

        <TextView
            android:id="@+id/item_address_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_event"
            android:textSize="@dimen/size_item_address_event_label" />

        <TextView
            android:id="@+id/item_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:text="@string/date"
            android:textSize="@dimen/size_item_date_event_label" />

    </LinearLayout>

</android.support.v7.widget.CardView>

