<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="modularity.andres.it.coderdojo.gui.event.EventActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="355dp"
        android:layout_height="465dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/title_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:padding="10dp" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/desc_label"
            android:textSize="16sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:padding="5dp"
                android:text="@string/foo_description"
                android:textSize="14sp" />
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:padding="10dp" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
