<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="modularity.andres.it.coderdojo.ui.detail.EventDetailsActivity"
    tools:showIn="@layout/activity_event_details">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                style="@style/MaterialCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/event_title"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:text="@string/title_label"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/MaterialCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/event_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:textSize="@dimen/subtitle_label" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/MaterialCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/description_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/description_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/desc_label"
                        android:textSize="@dimen/subtitle_label" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/event_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="8"
                        android:padding="5dp"
                        android:text="@string/foo_description"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/MaterialCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/address_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/address_event"
                        android:textSize="@dimen/subtitle_label" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:padding="10dp" />

                    <fragment
                        android:id="@+id/map_fragment"
                        android:name="modularity.andres.it.coderdojo.ui.detail.fragment.MapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="250dp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/MaterialCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/contact_us"
                        android:textSize="@dimen/subtitle_label" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:padding="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_email_outline_black_48dp" />

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:src="@drawable/ic_facebook_box_black_48dp" />

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_twitter_black_48dp" />

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_account_plus_black_48dp" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
